Assignment01_ws/log/build_2022-04-27_02-54-50/image_display/stderr.log
  File "/home/nils/allassignments-gruppe-e/Assignment01_ws/install/image_display/lib/python3.8/site-packages/image_display/image_display_node.py", line 47
    elif parameter.name == "store_imgs":
    ^
SyntaxError: invalid syntax

